fixed navigation layout issue

--- a/src/styles/responsive.css
+++ b/src/styles/responsive.css
@@ -49,7 +49,7 @@
  
 @media screen and (min-width: 800px) {
   .app-bar .app-bar__brand h1 {
-      font-size: 2em;
+      font-size: 1.5em;
   }
 }
  
