--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -17,7 +17,6 @@ body {
 */
  
 .app-bar {
-  padding: 8px;
   background-color: white;
   display: grid;
   grid-template-columns: auto 1fr auto;
@@ -49,7 +48,8 @@ body {
 .app-bar .app-bar__brand h1 {
   color: #1e5de6;
   text-transform: uppercase;
-  font-size: 22px;
+  font-size: 1.5rem;
+  padding-top: 4px;
   user-select: none;
 }
  
@@ -72,7 +72,7 @@ body {
   display: inline-block;
   text-decoration: none;
   color: black;
-  padding: 13px 8px;
+  padding: 13px 8px 0px;
   margin-bottom: 5px;
   width: 100%;
 }
